--- a/src/index.less
+++ b/src/index.less
@@ -1,110 +1,83 @@
-@import "https://fonts.googleapis.com/css?family=Comfortaa";
-
 #react-chat-slack {
   z-index: 1000;
-  width: 400px;
+  width: 350px;
   max-width: 95vw;
-
   position: fixed;
   right: 50px;
   bottom: -1px;
-
   border: 1px solid #d6d6d6;
   border-radius: 3px 3px 0 0;
   background: white;
-
   #react-chat-slack-greeting {
-    width: 400px;
+    width: 350px;
     height: 50px;
-
+    background-color: #009ae7;
+    color: white;
+    font-size: 22px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Lato';
   }
-
   #react-chat-slack-box {
     width: 100%;
-    height: 500px;
-
+    height: 450px;
     display: flex;
     flex-direction: column;
-
     .react-chat-slack-divider {
       height: 1px;
       background: #d6d6d6;
       margin: 0 15px;
     }
-
     .react-chat-slack-messages-container {
       flex: 9;
-
       display: flex;
       flex-direction: column;
       overflow: scroll;
-
       padding-bottom: 15px;
-
       .react-chat-slack-message {
         flex-shrink: 0;
-
         align-self: flex-start;
-
         padding: 15px;
         margin: 15px 15px 0 15px;
-
         border: 1px solid #d6d6d6;
         border-radius: 25px;
-
         display: flex;
         align-items: center;
-
         text-align: right;
-        font-family: 'Comfortaa', cursive;
-
+        font-family: 'Lato';
         &.react-chat-slack-my {
           align-self: flex-end;
         }
       }
     }
-
     .react-chat-slack-input-container {
       width: 400px;
       height: 50px;
       display: flex;
       align-items: center;
-
       input {
         flex: 4;
-
         background: none;
         border: none;
         box-shadow: none;
         outline: none;
-
         padding: 0 16px;
-
         font-size: 16px;
-        font-family: 'Comfortaa', cursive;
-
+        font-family: 'Lato';
         display: flex;
         align-items: center;
         justify-content: flex-start;
       }
-
       button {
         flex: 1;
-
         background: none;
         border: none;
         box-shadow: none;
         outline: none;
-
         font-size: 16px;
-        font-family: 'Comfortaa', cursive;
-
+        font-family: 'Lato';
         cursor: pointer;
       }
     }
