--- a/src/index.less
+++ b/src/index.less
@@ -39,7 +39,7 @@
       .react-chat-slack-message {
         flex-shrink: 0;
         align-self: flex-start;
-        padding: 15px;
+        padding: 7px;
         margin: 15px 15px 0 15px;
         border: 1px solid #d6d6d6;
         border-radius: 25px;
@@ -47,8 +47,12 @@
         align-items: center;
         text-align: right;
         font-family: 'Lato';
+        background-color: #009ae7;
+        color: white;
         &.react-chat-slack-my {
           align-self: flex-end;
+          background-color: white;
+          color: black;
         }
       }
     }
