--- a/src/index.less
+++ b/src/index.less
@@ -20,6 +20,18 @@
     cursor: pointer;
     font-family: 'Lato';
   }
+  #react-chat-slack-chatbox {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    color: white;
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-family: 'Lato';
+  }
   #react-chat-slack-box {
     width: 100%;
     height: 450px;
