--- a/src/index.less
+++ b/src/index.less
@@ -21,8 +21,11 @@
     font-family: 'Lato';
   }
   #react-chat-slack-chatbox {
-    width: 50px;
-    height: 50px;
+    right: 50px;
+    bottom: -1px;
+    width: 80px;
+    height: 80px;
+    position: fixed;
     background-color: white;
     color: white;
     font-size: 22px;
