--- a/src/index.less
+++ b/src/index.less
@@ -21,17 +21,15 @@
     font-family: 'Lato';
   }
   #react-chat-slack-chatbox {
-    right: 50px;
-    bottom: 30px;
+    z-index: 1000;
+    left: 90%;
+    bottom: 60px;
     width: 80px;
     height: 80px;
     position: fixed;
     background-color: white;
     color: white;
     font-size: 22px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     cursor: pointer;
     font-family: 'Lato';
   }
